# BDD

./: README.md  _CoqProject  coq-BDD.opam  index.html
.github/workflows/: build.yml
docs/: indexpage.html
master/: BDD.ite.html  toc.html
master/custom/: custom.js
theories/: ite.v
